# mangosDeps

lualib/: CMakeLists.txt
lualib/doc/img/: Thumbs.db
